# smellysat

./: .gitignore  Cargo.toml
.github/workflows/: benchmark.yml  cargo-test.yml
benches/: solver.rs
examples/: evaluate_dimacs.rs  n_queens.rs  seating_plan.rs
src/: lib.rs  problem_builder.rs  variable_registry.rs
src/dimacs/: mod.rs
src/instance/: clause.rs  literal.rs  mod.rs  variable.rs
src/solver/: assignment_set.rs  backtrack.rs  clause_index.rs  clause_store.rs  dfs.rs  dfs_path.rs  knowledge_graph.rs  mod.rs  sorted_vec.rs  trail.rs  unit_propagator.rs
