[package]
name = "smellysat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
fnv = "1.0.3"
prometheus = "0.13.3"
log = "0.4.17"
itertools = "0.10.5"
lazy_static = "1.4.0"
urlencoding = "2.1.2"

[dev-dependencies]
itertools = "0.10.5"
env_logger = "0.10.0"

[profile.release]
debug = true