[package]
name = "smellysat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
fnv = "1.0"
prometheus = "0.14"
log = "0.4"
itertools = "0.14"
lazy_static = "1.5"
urlencoding = "2.1"
is_sorted = "0.1"

[dev-dependencies]
itertools = "0.14"
env_logger = "0.11"
tempfile = "3.10"

[profile.release]
debug = true
